# This file is part of ICU4X. For terms of use, please see the file
# called LICENSE at the top level of the ICU4X source tree
# (online at: https://github.com/unicode-org/icu4x/blob/main/LICENSE ).

[package]
name = "icu_decimal"
description = "API for formatting basic decimal numbers in a locale-sensitive way"
version = "1.2.0"
rust-version = "1.61.0"
authors = ["The ICU4X Project Developers"]
edition = "2021"
repository = "https://github.com/unicode-org/icu4x"
homepage = "https://icu4x.unicode.org"
license = "Unicode-DFS-2016"
categories = ["internationalization"]
# Keep this in sync with other crates unless there are exceptions
include = [
    "src/**/*",
    "tests/**/*",
    "examples/**/*",
    "benches/**/*",
    "Cargo.toml",
    "LICENSE",
    "README.md"
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
displaydoc = { version = "0.2.3", default-features = false }
fixed_decimal = { version = "0.5.2", path = "../../utils/fixed_decimal" }
icu_locid = { version = "1.2.0", path = "../locid" }
icu_provider = { version = "1.2.0", path = "../../provider/core", features = ["macros"] }
writeable = { version = "0.5.1", path = "../../utils/writeable" }

databake = { version = "0.1.3", path = "../../utils/databake", features = ["derive"], optional = true}
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"], optional = true }

icu_decimal_data = { path = "data", optional = true }
icu_locid_transform = { path = "../../components/locid_transform", features = ["data"], optional = true }

[dev-dependencies]
criterion = "0.4"
icu = { path = "../icu", default-features = false }
icu_benchmark_macros = { path = "../../tools/benchmark/macros" }
icu_provider_adapters = { path = "../../provider/adapters" }
rand = "0.8"
rand_pcg = "0.3"
rand_distr = "0.4"
getrandom = { version = "0.2", features = ["js"] }

[features]
std = ["fixed_decimal/std", "icu_locid/std", "icu_provider/std"]
serde = ["dep:serde", "icu_provider/serde"]
datagen = ["serde", "dep:databake"]
bench = ["serde"]
data = ["dep:icu_decimal_data", "dep:icu_locid_transform"]

[package.metadata.cargo-all-features]
# Bench feature gets tested separately and is only relevant for CI
denylist = ["bench"]

[[bench]]
name = "fixed_decimal_format"
harness = false

[[example]]
name = "code_line_diff"
required-features = ["serde"]
