[package]
name = "icu4x_ecma402"
version = "0.0.1"
authors = ["The ICU4X Project Developers"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/unicode-org/icu4x"
license-file = "../../LICENSE"
categories = ["internationalization"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md"
]

[dependencies]
ecma402_traits = { version = "0.2.0" }
icu = { path = "../icu" }
icu_data_provider = { path = "../data_provider", features = ["invariant"] }


[dev-dependencies]
criterion = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0" }
icu_locid = { path = "../locid", features = ["serde"] }
icu_data_provider = { path = "../data_provider", features = ["invariant"] }
icu_testdata = { path = "../../resources/testdata"  }
