# This file is part of ICU4X. For terms of use, please see the file
# called LICENSE at the top level of the ICU4X source tree
# (online at: https://github.com/unicode-org/icu4x/blob/master/LICENSE ).
[package]
name = "icu4x_ecma402"
description = "ECMA-402 API functionality backed by the ICU4X library"
version = "0.1.0"
authors = ["The ICU4X Project Developers"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/unicode-org/icu4x"
license-file = "../../LICENSE"
categories = ["internationalization"]
include = [
    "src/**/*",
    "examples/**/*",
    "benches/**/*",
    "Cargo.toml",
    "README.md"
]

[dependencies]
ecma402_traits = { version = "0.2.0" }
icu = { version = "0.1", path = "../icu" }
icu_provider = { version = "0.1", path = "../provider", features = ["invariant"] }


[dev-dependencies]
criterion = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0" }
icu_locid = { version = "0.1", path = "../locid", features = ["serde"] }
icu_provider = { version = "0.1", path = "../provider", features = ["invariant"] }
icu_testdata = { version = "0.1", path = "../../resources/testdata"  }
