# This file is part of ICU4X. For terms of use, please see the file
# called LICENSE at the top level of the ICU4X source tree
# (online at: https://github.com/unicode-org/icu4x/blob/master/LICENSE ).
[package]
name = "icu-fs-data-provider"
description = "ICU4X data provider that reads from structured data files"
version = "0.0.1"
authors = ["The ICU4X Project Developers"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/unicode-org/icu4x"
license-file = "../../LICENSE"
categories = ["internationalization"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md"
]

[dependencies]
icu-data-provider = { path = "../data-provider" }
icu-locale = { path = "../locale", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Dependencies for the export module
erased-serde = { version = "0.3", optional = true }
log = { version = "0.4", optional = true }

# Dependencies for the binary
clap = { version = "2.33", optional = true }
icu-cldr-json-data-provider = { path = "../cldr-json-data-provider", features = ["download"], optional = true }
simple_logger = { version = "1.10", optional = true }

[dev-dependencies]
icu-locale-macros = { path = "../locale/macros" }

[features]
export = ["erased-serde", "icu-data-provider/invariant", "log"]
export-bin = ["export", "clap", "icu-cldr-json-data-provider", "simple_logger"]

[[bin]]
name = "icu4x-cldr-export"
required-features = [ "export-bin" ]
