# This file is part of ICU4X. For terms of use, please see the file
# called LICENSE at the top level of the ICU4X source tree
# (online at: https://github.com/unicode-org/icu4x/blob/master/LICENSE ).
[package]
name = "icu-fs-data-provider"
description = "ICU4X data provider that reads from structured data files"
version = "0.0.1"
authors = ["The ICU4X Project Developers"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/unicode-org/icu4x"
license-file = "../../LICENSE"
categories = ["internationalization"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md"
]

[dependencies]
icu-data-provider = { path = "../data-provider" }
icu-locid = { path = "../locid", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

# Serializers
# Note: serde_json is always included because it is used for parsing manifest.json
serde_json = { version = "1.0" }
bincode = { version = "1.3", optional = true }

# Dependencies for the export module
erased-serde = { version = "0.3", optional = true }
log = { version = "0.4", optional = true }
static_assertions = { version = "1.1", optional = true }

# Dependencies for the binary
clap = { version = "2.33", optional = true }
icu-cldr-json-data-provider = { path = "../cldr-json-data-provider", features = ["download"], optional = true }
simple_logger = { version = "1.10", optional = true }

[dev-dependencies]
icu-locid-macros = { path = "../locid/macros" }

[features]
export = ["erased-serde", "icu-data-provider/invariant", "static_assertions", "log"]
export-bin = ["export", "clap", "icu-cldr-json-data-provider", "simple_logger"]
serialize_none = ["icu-data-provider/serialize_none"]

[[bin]]
name = "icu4x-cldr-export"
required-features = [ "export-bin" ]
