# This file is part of ICU4X. For terms of use, please see the file
# called LICENSE at the top level of the ICU4X source tree
# (online at: https://github.com/unicode-org/icu4x/blob/main/LICENSE ).

[package]
name = "icu"
description = "International Components for Unicode"
version = "1.2.0"
rust-version = "1.64.0"
authors = ["The ICU4X Project Developers"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/unicode-org/icu4x"
homepage = "https://icu4x.unicode.org"
license = "Unicode-DFS-2016"
categories = ["internationalization"]
# Keep this in sync with other crates unless there are exceptions
include = [
    "src/**/*",
    "examples/**/*",
    "benches/**/*",
    "tests/**/*",
    "Cargo.toml",
    "LICENSE",
    "README.md"
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
icu_calendar = { version = "1.2.0", path = "../calendar", default-features = false }
icu_collator = { version = "1.2.0", path = "../collator", default-features = false }
icu_collections = { version = "1.2.0", path = "../collections", default-features = false }
icu_datetime = { version = "1.2.0", path = "../datetime", default-features = false }
icu_decimal = { version = "1.2.0", path = "../decimal", default-features = false }
icu_list = { version = "1.2.0", path = "../list", default-features = false }
icu_locid = { version = "1.2.0", path = "../locid", default-features = false }
icu_locid_transform = { version = "1.2.0", path = "../locid_transform", default-features = false }
icu_normalizer = { version = "1.2.0", path = "../normalizer", default-features = false }
icu_plurals = { version = "1.2.0", path = "../plurals", default-features = false }
icu_properties = { version = "1.2.0", path = "../properties", default-features = false }
icu_segmenter = { version = "1.2.0", path = "../segmenter", default-features = false }
icu_timezone = { version = "1.2.0", path = "../timezone", default-features = false }

# Experimental components
icu_casemap = { version = "0.7.1", path = "../../experimental/casemapping", default-features = false, optional = true }
icu_compactdecimal = { version = "0.2.0", path = "../../experimental/compactdecimal", default-features = false, optional = true }
icu_displaynames = { version = "0.10.0", path = "../../experimental/displaynames", default-features = false, optional = true }
icu_relativetime = { version = "0.1.0", path = "../../experimental/relativetime", default-features = false, optional = true }

# For docs links
icu_provider = { version = "1.2.0", path = "../../provider/core", default-features = false }

[dev-dependencies]
writeable = { path = "../../utils/writeable" }

[features]
default = [
    "icu_calendar/default",
    "icu_casemap?/default",
    "icu_collator/default",
    "icu_compactdecimal?/default",
    "icu_datetime/default",
    "icu_decimal/default",
    "icu_displaynames?/default",
    "icu_list/default",
    "icu_locid_transform/default",
    "icu_normalizer/default",
    "icu_plurals/default",
    "icu_properties/default",
    "icu_relativetime?/default",
    "icu_segmenter/default",
    "icu_timezone/default",
]
std = [
    "icu_calendar/std",
    "icu_casemap?/std",
    "icu_collator/std",
    "icu_collections/std",
    "icu_datetime/std",
    "icu_decimal/std",
    "icu_displaynames?/std",
    "icu_list/std",
    "icu_locid_transform/std",
    "icu_locid/std",
    "icu_normalizer/std",
    "icu_plurals/std",
    "icu_properties/std",
    "icu_relativetime?/std",
    "icu_segmenter/std",
    "icu_timezone/std",
]
serde = [
    "icu_calendar/serde",
    "icu_casemap?/serde",
    "icu_collator/serde",
    "icu_collections/serde",
    "icu_datetime/serde",
    "icu_decimal/serde",
    "icu_displaynames?/serde",
    "icu_list/serde",
    "icu_locid_transform/serde",
    "icu_locid/serde",
    "icu_normalizer/serde",
    "icu_plurals/serde",
    "icu_properties/serde",
    "icu_relativetime?/serde",
    "icu_segmenter/serde",
    "icu_timezone/serde",
]
compiled_data = [
    "icu_calendar/compiled_data",
    "icu_casemap?/compiled_data",
    "icu_collator/compiled_data",
    "icu_compactdecimal?/compiled_data",
    "icu_datetime/compiled_data",
    "icu_decimal/compiled_data",
    "icu_displaynames?/compiled_data",
    "icu_list/compiled_data",
    "icu_locid_transform/compiled_data",
    "icu_normalizer/compiled_data",
    "icu_plurals/compiled_data",
    "icu_properties/compiled_data",
    "icu_relativetime?/compiled_data",
    "icu_segmenter/compiled_data",
    "icu_timezone/compiled_data",
]
serde_human = [
    "icu_list/serde_human"
]
icu_datetime_experimental = [
    "icu_datetime/experimental",
]
experimental = [
    "icu_casemap",
    "icu_compactdecimal",
    "icu_datetime_experimental",
    "icu_displaynames",
    "icu_locid_transform/experimental",
    "icu_plurals/experimental",
    "icu_relativetime",
]

[package.metadata.cargo-all-features]
# Components are tested individually, and there's no logic in this crate
skip_feature_sets = [[]]

[[example]]
name = "tui"
required-features = ["serde"]
