# This file is part of ICU4X. For terms of use, please see the file
# called LICENSE at the top level of the ICU4X source tree
# (online at: https://github.com/unicode-org/icu4x/blob/main/LICENSE ).

[package]
name = "icu"
description = "International Components for Unicode"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
include.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
icu_calendar = { workspace = true }
icu_casemap = { workspace = true }
icu_collator = { workspace = true }
icu_collections = { workspace = true }
icu_datetime = { workspace = true }
icu_decimal = { workspace = true }
icu_list = { workspace = true }
icu_locid = { workspace = true }
icu_locid_transform = { workspace = true }
icu_normalizer = { workspace = true }
icu_plurals = { workspace = true }
icu_properties = { workspace = true }
icu_segmenter = { workspace = true }
icu_timezone = { workspace = true }

# Experimental components
icu_compactdecimal = { workspace = true, optional = true }
icu_displaynames = { workspace = true, optional = true }
icu_relativetime = { workspace = true, optional = true }

# For docs links and features
icu_provider = { workspace = true }

[dev-dependencies]
icu_datetime = { workspace = true, features = ["serde"] }
icu_provider_adapters = { workspace = true, features = ["serde"] }
icu_provider_blob = { workspace = true }
writeable = { workspace = true }

[features]
default = [
    "icu_calendar/default",
    "icu_casemap/default",
    "icu_collator/default",
    "icu_compactdecimal?/default",
    "icu_datetime/default",
    "icu_decimal/default",
    "icu_displaynames?/default",
    "icu_list/default",
    "icu_locid_transform/default",
    "icu_normalizer/default",
    "icu_plurals/default",
    "icu_properties/default",
    "icu_relativetime?/default",
    "icu_segmenter/default",
    "icu_timezone/default",
]
std = [
    "icu_calendar/std",
    "icu_casemap/std",
    "icu_collator/std",
    "icu_collections/std",
    "icu_datetime/std",
    "icu_decimal/std",
    "icu_displaynames?/std",
    "icu_list/std",
    "icu_locid_transform/std",
    "icu_locid/std",
    "icu_normalizer/std",
    "icu_plurals/std",
    "icu_properties/std",
    "icu_relativetime?/std",
    "icu_segmenter/std",
    "icu_timezone/std",
]
serde = [
    "icu_calendar/serde",
    "icu_casemap/serde",
    "icu_collator/serde",
    "icu_collections/serde",
    "icu_datetime/serde",
    "icu_decimal/serde",
    "icu_displaynames?/serde",
    "icu_list/serde",
    "icu_locid_transform/serde",
    "icu_locid/serde",
    "icu_normalizer/serde",
    "icu_plurals/serde",
    "icu_properties/serde",
    "icu_relativetime?/serde",
    "icu_segmenter/serde",
    "icu_timezone/serde",
]
compiled_data = [
    "icu_calendar/compiled_data",
    "icu_casemap/compiled_data",
    "icu_collator/compiled_data",
    "icu_compactdecimal?/compiled_data",
    "icu_datetime/compiled_data",
    "icu_decimal/compiled_data",
    "icu_displaynames?/compiled_data",
    "icu_list/compiled_data",
    "icu_locid_transform/compiled_data",
    "icu_normalizer/compiled_data",
    "icu_plurals/compiled_data",
    "icu_properties/compiled_data",
    "icu_relativetime?/compiled_data",
    "icu_segmenter/compiled_data",
    "icu_timezone/compiled_data",
]
serde_human = [
    "icu_list/serde_human"
]
icu_datetime_experimental = [
    "icu_datetime/experimental",
]
experimental = [
    "icu_compactdecimal",
    "icu_datetime_experimental",
    "icu_displaynames",
    "icu_locid_transform/experimental",
    "icu_plurals/experimental",
    "icu_relativetime",
]
sync = ["icu_provider/sync"]
logging = ["icu_provider/logging"]

[package.metadata.cargo-all-features]
# Components are tested individually, and there's no logic in this crate
skip_feature_sets = [[]]

[[example]]
name = "tui"
required-features = ["serde"]
