# This file is part of ICU4X. For terms of use, please see the file
# called LICENSE at the top level of the ICU4X source tree
# (online at: https://github.com/unicode-org/icu4x/blob/main/LICENSE ).

[package]
name = "icu_list"
description = "ECMA-402 ListFormatter"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
displaydoc = { version = "0.2.3", default-features = false }
icu_provider = { workspace = true, features = ["macros"] }
regex-automata = { version = "0.2", default-features = false }
writeable = { workspace = true }

databake = { workspace = true, optional = true, features = ["derive"]}
deduplicating_array = { workspace = true, optional = true }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"], optional = true }

icu_list_data = { workspace = true, optional = true }
icu_locid_transform = { workspace = true, optional = true, features = ["compiled_data"] }

[dev-dependencies]
serde_json = "1"
postcard = { version = "1.0.0", features = ["use-std"], default-features = false }
icu = { workspace = true }
icu_benchmark_macros = { workspace = true }

[features]
default = ["compiled_data"]
std = ["icu_provider/std"]
serde = ["dep:deduplicating_array", "dep:serde", "icu_provider/serde"]
serde_human = ["serde", "regex-automata/alloc"]
datagen = ["serde", "std", "dep:databake", "regex-automata/alloc"]
bench = []
compiled_data = ["dep:icu_list_data", "dep:icu_locid_transform"]

[package.metadata.cargo-all-features]
# Bench feature gets tested separately and is only relevant for CI
denylist = ["bench"]

[[example]]
name = "and_list"
