[package]
name = "icu-locale"
description = "API for managing Unicode Language and Locale Identifiers"
version = "0.0.1"
authors = ["The ICU4X Project Developers"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/unicode-org/icu4x"
license-file = "../../LICENSE"
categories = ["internationalization"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md"
]

[dependencies]
tinystr = "0.3"
serde = { version = "1.0", optional = true }
ecma402_traits = { version = "0.2.0", optional = true }

[dev-dependencies]
criterion = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
bench = false

[features]
default = []

# If set, ensures that the locale implements `ecma402_traits::Locale`.
use-ecma402 = [
  "ecma402_traits",
]

[[bench]]
name = "subtags"
harness = false

[[bench]]
name = "langid"
harness = false

[[bench]]
name = "locale"
harness = false

[[example]]
name = "filter_langids"
test = true
