# This file is part of ICU4X. For terms of use, please see the file
# called LICENSE at the top level of the ICU4X source tree
# (online at: https://github.com/unicode-org/icu4x/blob/master/LICENSE ).
[package]
name = "icu-locale"
description = "API for managing Unicode Language and Locale Identifiers"
version = "0.0.1"
authors = ["The ICU4X Project Developers"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/unicode-org/icu4x"
license-file = "../../LICENSE"
categories = ["internationalization"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md"
]

[dependencies]
tinystr = "0.3"
serde = { version = "1.0", optional = true }

[dev-dependencies]
criterion = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
bench = false  # This option is required for Benchmark CI

[features]
default = []

bench = []

[[bench]]
name = "subtags"
harness = false
required-features = ["bench"]

[[bench]]
name = "langid"
harness = false

[[bench]]
name = "locale"
harness = false

[[example]]
name = "filter_langids"
test = true
