# This file is part of ICU4X. For terms of use, please see the file
# called LICENSE at the top level of the ICU4X source tree
# (online at: https://github.com/unicode-org/icu4x/blob/master/LICENSE ).
[package]
name = "icu_locale_canonicalizer"
version = "0.1.0"
authors = ["The ICU4X Project Developers"]
edition = "2018"
repository = "https://github.com/unicode-org/icu4x"
license-file = "../../LICENSE"
categories = ["internationalization"]
include = [
    "src/**/*",
    "benches/**/*",
    "Cargo.toml",
    "README.md"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icu_locid = { version = "0.1", path = "../locid" }
icu_provider = { version = "0.1", path = "../provider" }

[dev-dependencies]
criterion = "0.3.3"
icu_locid_macros = { version = "0.1", path = "../locid/macros" }
icu_testdata = { version = "0.1", path = "../../resources/testdata" }

[lib]
bench = false  # This option is required for Benchmark CI

[features]
default = []
bench = []

[[bench]]
name = "locale_canonicalizer"
harness = false
