# This file is part of ICU4X. For terms of use, please see the file
# called LICENSE at the top level of the ICU4X source tree
# (online at: https://github.com/unicode-org/icu4x/blob/main/LICENSE ).

[package]
name = "icu_locale_canonicalizer"
version = "0.1.0"
authors = ["The ICU4X Project Developers"]
edition = "2018"
repository = "https://github.com/unicode-org/icu4x"
license-file = "../../LICENSE"
categories = ["internationalization"]
# Keep this in sync with other crates unless there are exceptions
include = [
    "src/**/*",
    "examples/**/*",
    "tests/**/*",
    "Cargo.toml",
    "README.md"
]

[package.metadata.cargo-all-features]
skip_optional_dependencies = true

[dependencies]
icu_locid = { version = "0.1", path = "../locid" }
icu_provider = { version = "0.1", path = "../provider" }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.3.3"
icu_locid_macros = { version = "0.1", path = "../locid/macros" }
icu_testdata = { version = "0.1", path = "../../resources/testdata" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
bench = false  # This option is required for Benchmark CI

[features]
default = ["provider_serde"]
bench = []
provider_serde = ["serde", "icu_locid/serde"]

[[bench]]
name = "locale_canonicalizer"
harness = false

[[test]]
name = "locale_canonicalizer"
required-features = ["provider_serde"]
