# This file is part of ICU4X. For terms of use, please see the file
# called LICENSE at the top level of the ICU4X source tree
# (online at: https://github.com/unicode-org/icu4x/blob/main/LICENSE ).

[package]
name = "icu_locale_canonicalizer"
description = "API for Unicode Language and Locale Identifiers canonicalization"
version = "0.5.0"
authors = ["The ICU4X Project Developers"]
edition = "2018"
repository = "https://github.com/unicode-org/icu4x"
license-file = "LICENSE"
categories = ["internationalization"]
# Keep this in sync with other crates unless there are exceptions
include = [
    "src/**/*",
    "examples/**/*",
    "benches/**/*",
    "tests/**/*",
    "Cargo.toml",
    "LICENSE",
    "README.md"
]

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
# Bench feature gets tested separately and is only relevant for CI
denylist = ["bench"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
icu_locid = { version = "0.5", path = "../locid" }
icu_provider = { version = "0.5", path = "../../provider/core", features = ["macros"] }
litemap = { version = "0.3.0", path = "../../utils/litemap", features = ["yoke"] }
serde = { version = "1.0", features = ["derive", "alloc"], optional = true, default-features = false }
tinystr = { path = "../../utils/tinystr", version = "0.5.0", default-features = false, features = ["alloc", "zerovec"] }
zerovec = { path = "../../utils/zerovec", version = "0.6.0", features = ["yoke"]}

[dev-dependencies]
criterion = "0.3.3"
icu_testdata = { version = "0.5", path = "../../provider/testdata", features = ["static"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
bench = false  # This option is required for Benchmark CI
path = "src/lib.rs"

[features]
default = ["serialize"]
bench = []
serialize = ["serde", "icu_locid/serde", "litemap/serde", "tinystr/serde", "zerovec/serde"]
datagen = ["serialize", "litemap/serde_serialize"]

[[bench]]
name = "locale_canonicalizer"
harness = false

[[test]]
name = "locale_canonicalizer"
required-features = ["serialize"]
